--- a/src/views/cart/shopcart.ejs
+++ b/src/views/cart/shopcart.ejs
@@ -1,4 +1,81 @@
-<% include ../partials/_header %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/viewCart.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Russo+One&display=swap&subset=latin-ext" rel="stylesheet">
+
+    <link rel="icon" href="/media/Images/logo.jpg">
+    <title>Food Feast | Safe & healthy food</title>
+</head>
+<body class="">
+
+        <nav class="navigation">
+                <ul class="head-nav mb-0">
+            
+                    <li class="head-nav__item">
+                        <a href="/" class="head-nav__link">
+                            <div class="head-nav__logo">
+                                    <img class="head-nav__logo" src="/media/images/logo.jpg">
+                            </div>
+                            
+                        </a>
+                    </li>
+            
+                    <li class="head-nav__item">
+                            <a href="menu.html" class="head-nav__link">
+                                Menu
+                            </a>
+                    </li>
+            
+                   
+            
+                    <li class="head-nav__item">
+                            <a href="about.html" class="head-nav__link">
+                                About
+                            </a>
+                    </li>
+            
+                    <li class="head-nav__item">
+                            <a href="contact.html" class="head-nav__link">
+                                Contact us
+                            </a>
+                    </li>
+            
+                    <li class="head-nav__item">
+                            <a href="login.html" class="head-nav__link ">
+                            Login
+                            </a>
+                    </li>
+            
+                    <li class="head-nav__item">
+                            <a href="signup.html" class="head-nav__link">
+                            Sign UP
+                            </a>
+                    </li>
+
+
+                    <li class="head-nav__item">
+                        <a href="/users/signup" class="head-nav__link">
+                            Cart
+                        </a>
+                 </li>
+    
+                    <li class="head-nav__item-cart">
+                            <a href="viewCart.html" class="head-nav__link">
+                                <i class="fas fa-2x fa-shopping-cart"></i>
+                            </a>
+                    </li>
+                </ul>
+        </nav>
 
 <div class="container bg-secondary p-5 my-5 border rounded">
   <table class="table  table-hover text-capitalize  text-center font-weight-bold">
@@ -77,4 +154,7 @@
 
 
 
-<% include ../partials/_footer %>      
+  <script src="script/viewCart.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
