--- a/src/views/prodcinco/prodcinco.ejs
+++ b/src/views/prodcinco/prodcinco.ejs
@@ -1,31 +1,218 @@
-<% include ../partials/_header %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/menu.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Russo+One&display=swap&subset=latin-ext" rel="stylesheet">
+
+    <link rel="icon" href="/media/Images/logo.jpg">
+    <title>Food Feast | Safe & healthy food</title>
+</head>
+<body class="">
+
+    <nav class="navigation">
+
+            <ul class="head-nav mb-0">
+
+                    <li class="head-nav__item">
+                          <a href="/" class="head-nav__link">
+                              <div class="head-nav__logo">
+                                    <img class="head-nav__logo" src="/media/images/logo.jpg">
+                              </div>
+                              
+                          </a>
+                    </li>
+                    <% if(user) { %>
+            
+                    <li class="head-nav__item">
+                        <a href="/users/profile" class="head-nav__link">
+                            Profile
+                        </a>
+                    </li>
+            
+                    <li class="head-nav__item">
+                        <a href="/users/logout" class="head-nav__link">
+                            Logout
+                        </a>
+                   </li>
+                   <% } else { %>                    
+            
+            
+                   <li class="head-nav__item">
+                    
+                            <a href="/" class="head-nav__link">
+                                Home
+                            </a>
+                   </li>
+                  
+                    <li class="head-nav__item">
+                            <a href="/users/signin" class="head-nav__link">
+                                Login
+                            </a>
+                   </li>
+            
+            
+                   <li class="head-nav__item">
+                      <a href="/users/signup" class="head-nav__link">
+                        Registrarse
+                       </a>
+                  </li>
+                   <% } %>
+            
+                  
+                   <li class="head-nav__item-cart">
+                      <a href="/shopcart/" class="head-nav__link">
+                        <i class="fas fa-2x fa-shopping-cart"></i>
+                        <% if(session.cart) { %>
+                          <div class="cart-items"><%= session.cart.totalQty%></div>
+                        <% } %>
+                      </a>
+                  </li>
+                     
+                  </ul>
 
 
 
-  <div class="row mt-5">
-    <% prodcinco.forEach(function (prodcinc) { %>
-      <div class="col-md-3 wow slideInDown">
-       <div class="card"> 
-          <a href="/prodcincoredirect/<%= prodcinc.id %>">
-         <img class="card-img-top img-fluid" alt="img1" src="<%= prodcinc.imagePath %>">
-          </a>
-          <div class="card-body">
-        <div class="card-heading"><%= prodcinc.product %></div>
-        <h4> $<%= prodcinc.price %>  </h4>
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit neque, mollitia dolorem. </p>
-        <a class="btn btn-pink text-light"><i class="fa fa-cart-plus" aria-hidden="true"></i> Add To Cart</a> </div>
+    </nav>
+
+    <div class="container my-5">
+        <div class="nav-category row align-items-center align-content-start justify-content-center">
+           <a href="/proddosindex/1" class="nav-category__item col-md-3 col-sm-6 col-12 btn btn-primary font-secondary text-uppercase"> Platos del día</a>
+           <a href="#" class="nav-category__item col-md-3 col-sm-6 col-12 btn btn-primary font-secondary text-uppercase"> Nav Item</a>
+           <a href="#" class="nav-category__item col-md-3 col-sm-6 col-12 btn btn-primary font-secondary text-uppercase"> Nav Item</a>
+           <a href="#" class="nav-category__item col-md-3 col-sm-6 col-12 btn btn-primary font-secondary text-uppercase"> Nav Item</a>
+           <a href="#" class="nav-category__item col-md-3 col-sm-6 col-12 btn btn-primary font-secondary text-uppercase"> Nav Item</a>
+           <a href="#" class="nav-category__item col-md-3 col-sm-6 col-12 btn btn-primary font-secondary text-uppercase"> Nav Item</a>
         </div>
-  </div>
-  <% }) %>
+    </div>
+
+    <main class="menu my-5">
+        <section class="menu__items container">
+            <div>
+                <div class="category d-inline-block bg-primary text-light px-5 py-2">
+                    <h4 class="category__title font-quaterny text-uppercase text-center m-0">Category</h4>
+                </div>
+                
+                <div class="items row">
+                    <div class="item col-md-6 col-12 px-sm-4 py-sm-3 p-0 bg-secondary">
+                        <div class="item__content row justify-content-center">
+                            <div class="item__image-box col-sm-4 col-12 mb-sm-0 mb-4">
+                                <img class="item__image" src="/media/Images/Items/test.jpg" alt="">
+                            </div>
+                            <div class="item__text col-sm-8 col-12 px-sm-2 py-sm-0 py-2 px-5 d-flex flex-column justify-content-between">
+                                <div class="">
+                                    <h4 class="item__title font-secondary text-uppercase font-weight-bold">Lorem ipsum dolor</h4>
+                                    <p class="item__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil adipisci modi similique sapiente nobis? Consectetur ipsa soluta fugit facilis in?</p>
+                                </div>
+
+                                <div>
+                                <!-- <div class="item__size-dropdown dropdown form-group" id="select-type">
+                                        <button class="item__size-btn btn btn-tertiary btn-block dropdown-toggle" data-toggle="dropdown" >
+                                            Type <span class="caret"></span>
+                                        </button>
+                                        <ul class="item__size-dropdown-menu dropdown-menu" id="type-menu">
+                                            <li class="item__size-item dropdown-item">Restaurant or Food Experience</li>
+                                            <li class="item__size-item dropdown-item">Website or Mobile Experience</li>
+                                            <li class="item__size-item dropdown-item">Refund</li>
+                                            <li class="item__size-item dropdown-item">Late Delivery</li>
+                                            <li class="item__size-item dropdown-item">General Inquiry or Comment</li>
+                                        </ul>
+                                    </div>--> 
+                                    <div class="d-flex justify-content-between">
+                                        <h3 class="item__price font-weight-bold">Rs. <span class="item__price-value">615</span></h3>
+                                        <a href="#" class="item__cart add-cart-btn btn btn-primary font-secondary text-uppercase m-0">Add to cart</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item col-md-6 col-12 px-sm-4 py-sm-3 p-0 bg-secondary">
+                            <div class="item__content row justify-content-center">
+                                <div class="item__image-box col-sm-4 col-12 mb-sm-0 mb-4">
+                                    <img class="item__image" src="media/Images/Items/test.jpg" alt="">
+                                </div>
+                                <div class="item__text col-sm-8 col-12 px-sm-2 py-sm-0 py-2 px-5 d-flex flex-column justify-content-between">
+                                    <div class="">
+                                        <h4 class="item__title font-secondary text-uppercase font-weight-bold">Lorem ipsum dolor</h4>
+                                        <p class="item__description">Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, corporis? consectetur adipisicing elit. Nihil adipisci modi similique sapiente nobis? Consectetur ipsa soluta fugit facilis in?</p>
+                                    </div>
+    
+                                   <div>
+                                       <!-- <div class="item__size-dropdown dropdown form-group" id="select-type">
+                                            <button class="item__size-btn btn btn-tertiary btn-block dropdown-toggle" data-toggle="dropdown" >
+                                                Type <span class="caret"></span>
+                                            </button>
+                                            <ul class="item__size-dropdown-menu dropdown-menu" id="type-menu">
+                                                <li class="item__size-item dropdown-item">Restaurant or Food Experience</li>
+                                                <li class="item__size-item dropdown-item">Website or Mobile Experience</li>
+                                                <li class="item__size-item dropdown-item">Refund</li>
+                                                <li class="item__size-item dropdown-item">Late Delivery</li>
+                                                <li class="item__size-item dropdown-item">General Inquiry or Comment</li>
+                                            </ul>
+                                        </div>-->
+                                        <div class="d-flex justify-content-between">
+                                            <h3 class="item__price font-weight-bold">Rs. <span class="item__price-value">615</span></h3>
+                                            <a href="#" class="item__cart add-cart-btn btn btn-primary font-secondary text-uppercase m-0">Add to cart</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    <div class="item col-md-6 col-12 px-sm-4 py-sm-3 p-0 bg-secondary">
+                        <div class="item__content row justify-content-center">
+                            <div class="item__image-box col-sm-4 col-12 mb-sm-0 mb-4">
+                                <img class="item__image" src="media/Images/Items/test.jpg" alt="">
+                            </div>
+                            <div class="item__text col-sm-8 col-12 px-sm-2 py-sm-0 py-2 px-5 d-flex flex-column justify-content-between">
+                                <div class="">
+                                    <h4 class="item__title font-secondary text-uppercase font-weight-bold">Lorem ipsum dolor</h4>
+                                    <p class="item__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil adipisci modi similique sapiente nobis? Consectetur ipsa soluta fugit facilis in?</p>
+                                </div>
+
+                                <div>
+                                  <!--  <div class="item__size-dropdown dropdown form-group" id="select-type">
+                                        <button class="item__size-btn btn btn-tertiary btn-block dropdown-toggle" data-toggle="dropdown" >
+                                            Type <span class="caret"></span>
+                                        </button>
+                                        <ul class="item__size-dropdown-menu dropdown-menu" id="type-menu">
+                                            <li class="item__size-item dropdown-item">Restaurant or Food Experience</li>
+                                            <li class="item__size-item dropdown-item">Website or Mobile Experience</li>
+                                            <li class="item__size-item dropdown-item">Refund</li>
+                                            <li class="item__size-item dropdown-item">Late Delivery</li>
+                                            <li class="item__size-item dropdown-item">General Inquiry or Comment</li>
+                                        </ul>
+                                    </div>-->
+                                    <div class="d-flex justify-content-between">
+                                        <h3 class="item__price font-weight-bold">Rs. <span class="item__price-value">615</span></h3>
+                                        <a href="#" class="item__cart add-cart-btn btn btn-primary font-secondary text-uppercase m-0">Add to cart</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
 
 
 
-</div>
-     
-</div>
-</div>
+    
 
-
-
-
-  <% include ../partials/_footer %>
+    <script src="/script/menu.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
+</html>
