--- a/src/views/proddos/proddos.ejs
+++ b/src/views/proddos/proddos.ejs
@@ -1,126 +1,218 @@
-<% include ../partials/_header %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/menu.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Russo+One&display=swap&subset=latin-ext" rel="stylesheet">
 
+    <link rel="icon" href="/media/Images/logo.jpg">
+    <title>Food Feast | Safe & healthy food</title>
+</head>
+<body class="">
 
-<div class="col-12">
-  <!-- Main Content -->
-  <main class="row">
+    <nav class="navigation">
 
-      <!-- Category Products -->
-      <div class="col-12">
-          <div class="row">
-              <div class="col-12 py-3">
-                  <div class="row">
-                      <div class="col-12 text-center text-uppercase">
-                          <h2>Computers</h2>
-                      </div>
-                  </div>
-                  <div class="row">
-                        <% proddos.forEach(function (proddo) { %>
+            <ul class="head-nav mb-0">
 
-                      <!-- Product -->
-                      <div class="col-xl-2 col-lg-3 col-sm-6 my-3">
-                          <div class="col-12 bg-white text-center h-100 product-item">
-                              <div class="row h-100">
-                                  <div class="col-12 p-0 mb-3">
-                                      <a href="/proddosredirect/<%= proddo.id %>">
-                                          <img src="<%= proddo.image %>" class="img-fluid">
-                                      </a>
-                                  </div>
-                                  <div class="col-12 mb-3">
-                                        <%= proddo.title %> 
-                                  </div>
-                                  <div class="col-12 mb-3">
-                                          <span class="product-price-old">
-                                              $<%= proddo.price %> 
-                                          </span>
-                                      
-                                  </div>
-                                  <div class="col-12 mb-3 align-self-end">
-                                        <a href="/proddosredirect/<%= proddo.id %>" class="btn btn-outline-dark" type="button"><i class="fas fa-cart-plus mr-2"></i>ver detalles</a>
-                                  </div>
+                    <li class="head-nav__item">
+                          <a href="/" class="head-nav__link">
+                              <div class="head-nav__logo">
+                                    <img class="head-nav__logo" src="/media/images/logo.jpg">
                               </div>
-                          </div>
-                      </div>
-                      <!-- Product -->
-                      <% }) %>
-
-                  </div>
-              </div>
-          </div>
-      </div>
-      <!-- Category Products -->
-
-      <div class="col-12">
-        <div class="row">
-              <!-- pagination -->
-              <% if(pages > 0) { %> <!-- show pagination if there is pages -->
-                <nav  class="mx-auto" style="margin-bottom: 50px">
-                  <ul class="pagination">
-                    <!-- FIRST ITEM -->
-                    <% if(current == 1) { %>
-                      <li class="page-item disabled">
-                        <a class="page-link" href="#">First</a>
-                      </li>
-                    <% } else { %>
-                      <li class="page-item">
-                        <a class="page-link" href="/proddosindex/1">First</a>
-                      </li>
-                    <% } %>
-                    <!-- ITEMS  -->
-                    <% var i = (Number(current) > 5 ? Number(current) - 4 : 1) %>
-                    <% if(i !== 1) { %>
-                      <li class="page-item disabled">
-                        <a class="page-link" href="#">...</a>
-                      </li>
-                    <% } %>
-                    <% for(; i <= (Number(current) + 4) && i <= pages; i++) { %>
-                      <% if(i == current) { %>
-                        <li class="page-item active">
-                          <a class="page-link" href="<%= i %>">
-                            <%= i %>
+                              
                           </a>
-                        </li>
-                      <% } else { %>
-                        <li class="page-item">
-                          <a class="page-link" href="/proddosindex/<%= i %>">
-                            <%= i %>
-                          </a>
-                        </li>
-                      <% } %>
-                      <% if (i == Number(current) + 4 && i < pages) { %>
-                         <li class="page-item disabled">
-                           <a class="page-link" href="#">...</a>
-                         </li>
-                      <% } %>
-                    <% } %>
-                    <!-- LAST ITEM -->
-                    <% if(current == pages) { %>
-                      <li class="page-item disabled">
-                        <a class="page-link" href="#">
-                          Last
+                    </li>
+                    <% if(user) { %>
+            
+                    <li class="head-nav__item">
+                        <a href="/users/profile" class="head-nav__link">
+                            Profile
                         </a>
-                      </li>
-                    <% } else { %>
-                      <li class="page-item">
-                        <a class="page-link" href="/proddosindex/<%= pages %>">
-                          Last
+                    </li>
+            
+                    <li class="head-nav__item">
+                        <a href="/users/logout" class="head-nav__link">
+                            Logout
                         </a>
-                      </li>
-                    <% } %>
+                   </li>
+                   <% } else { %>                    
+            
+            
+                   <li class="head-nav__item">
+                    
+                            <a href="/" class="head-nav__link">
+                                Home
+                            </a>
+                   </li>
+                  
+                    <li class="head-nav__item">
+                            <a href="/users/signin" class="head-nav__link">
+                                Login
+                            </a>
+                   </li>
+            
+            
+                   <li class="head-nav__item">
+                      <a href="/users/signup" class="head-nav__link">
+                        Registrarse
+                       </a>
+                  </li>
+                   <% } %>
+            
+                  
+                   <li class="head-nav__item-cart">
+                      <a href="/shopcart/" class="head-nav__link">
+                        <i class="fas fa-2x fa-shopping-cart"></i>
+                        <% if(session.cart) { %>
+                          <div class="cart-items"><%= session.cart.totalQty%></div>
+                        <% } %>
+                      </a>
+                  </li>
+                     
                   </ul>
-                </nav>
-              <% } %>
+
+
+
+    </nav>
+
+    <div class="container my-5">
+        <div class="nav-category row align-items-center align-content-start justify-content-center">
+           <a href="/proddosindex/1" class="nav-category__item col-md-3 col-sm-6 col-12 btn btn-primary font-secondary text-uppercase"> Platos del día</a>
+           <a href="#" class="nav-category__item col-md-3 col-sm-6 col-12 btn btn-primary font-secondary text-uppercase"> Nav Item</a>
+           <a href="#" class="nav-category__item col-md-3 col-sm-6 col-12 btn btn-primary font-secondary text-uppercase"> Nav Item</a>
+           <a href="#" class="nav-category__item col-md-3 col-sm-6 col-12 btn btn-primary font-secondary text-uppercase"> Nav Item</a>
+           <a href="#" class="nav-category__item col-md-3 col-sm-6 col-12 btn btn-primary font-secondary text-uppercase"> Nav Item</a>
+           <a href="#" class="nav-category__item col-md-3 col-sm-6 col-12 btn btn-primary font-secondary text-uppercase"> Nav Item</a>
+        </div>
+    </div>
+
+    <main class="menu my-5">
+        <section class="menu__items container">
+            <div>
+                <div class="category d-inline-block bg-primary text-light px-5 py-2">
+                    <h4 class="category__title font-quaterny text-uppercase text-center m-0">Category</h4>
+                </div>
+                
+                <div class="items row">
+                    <div class="item col-md-6 col-12 px-sm-4 py-sm-3 p-0 bg-secondary">
+                        <div class="item__content row justify-content-center">
+                            <div class="item__image-box col-sm-4 col-12 mb-sm-0 mb-4">
+                                <img class="item__image" src="/media/Images/Items/test.jpg" alt="">
+                            </div>
+                            <div class="item__text col-sm-8 col-12 px-sm-2 py-sm-0 py-2 px-5 d-flex flex-column justify-content-between">
+                                <div class="">
+                                    <h4 class="item__title font-secondary text-uppercase font-weight-bold">Lorem ipsum dolor</h4>
+                                    <p class="item__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil adipisci modi similique sapiente nobis? Consectetur ipsa soluta fugit facilis in?</p>
+                                </div>
+
+                                <div>
+                                <!-- <div class="item__size-dropdown dropdown form-group" id="select-type">
+                                        <button class="item__size-btn btn btn-tertiary btn-block dropdown-toggle" data-toggle="dropdown" >
+                                            Type <span class="caret"></span>
+                                        </button>
+                                        <ul class="item__size-dropdown-menu dropdown-menu" id="type-menu">
+                                            <li class="item__size-item dropdown-item">Restaurant or Food Experience</li>
+                                            <li class="item__size-item dropdown-item">Website or Mobile Experience</li>
+                                            <li class="item__size-item dropdown-item">Refund</li>
+                                            <li class="item__size-item dropdown-item">Late Delivery</li>
+                                            <li class="item__size-item dropdown-item">General Inquiry or Comment</li>
+                                        </ul>
+                                    </div>--> 
+                                    <div class="d-flex justify-content-between">
+                                        <h3 class="item__price font-weight-bold">Rs. <span class="item__price-value">615</span></h3>
+                                        <a href="#" class="item__cart add-cart-btn btn btn-primary font-secondary text-uppercase m-0">Add to cart</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item col-md-6 col-12 px-sm-4 py-sm-3 p-0 bg-secondary">
+                            <div class="item__content row justify-content-center">
+                                <div class="item__image-box col-sm-4 col-12 mb-sm-0 mb-4">
+                                    <img class="item__image" src="media/Images/Items/test.jpg" alt="">
+                                </div>
+                                <div class="item__text col-sm-8 col-12 px-sm-2 py-sm-0 py-2 px-5 d-flex flex-column justify-content-between">
+                                    <div class="">
+                                        <h4 class="item__title font-secondary text-uppercase font-weight-bold">Lorem ipsum dolor</h4>
+                                        <p class="item__description">Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, corporis? consectetur adipisicing elit. Nihil adipisci modi similique sapiente nobis? Consectetur ipsa soluta fugit facilis in?</p>
+                                    </div>
+    
+                                   <div>
+                                       <!-- <div class="item__size-dropdown dropdown form-group" id="select-type">
+                                            <button class="item__size-btn btn btn-tertiary btn-block dropdown-toggle" data-toggle="dropdown" >
+                                                Type <span class="caret"></span>
+                                            </button>
+                                            <ul class="item__size-dropdown-menu dropdown-menu" id="type-menu">
+                                                <li class="item__size-item dropdown-item">Restaurant or Food Experience</li>
+                                                <li class="item__size-item dropdown-item">Website or Mobile Experience</li>
+                                                <li class="item__size-item dropdown-item">Refund</li>
+                                                <li class="item__size-item dropdown-item">Late Delivery</li>
+                                                <li class="item__size-item dropdown-item">General Inquiry or Comment</li>
+                                            </ul>
+                                        </div>-->
+                                        <div class="d-flex justify-content-between">
+                                            <h3 class="item__price font-weight-bold">Rs. <span class="item__price-value">615</span></h3>
+                                            <a href="#" class="item__cart add-cart-btn btn btn-primary font-secondary text-uppercase m-0">Add to cart</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    <div class="item col-md-6 col-12 px-sm-4 py-sm-3 p-0 bg-secondary">
+                        <div class="item__content row justify-content-center">
+                            <div class="item__image-box col-sm-4 col-12 mb-sm-0 mb-4">
+                                <img class="item__image" src="media/Images/Items/test.jpg" alt="">
+                            </div>
+                            <div class="item__text col-sm-8 col-12 px-sm-2 py-sm-0 py-2 px-5 d-flex flex-column justify-content-between">
+                                <div class="">
+                                    <h4 class="item__title font-secondary text-uppercase font-weight-bold">Lorem ipsum dolor</h4>
+                                    <p class="item__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil adipisci modi similique sapiente nobis? Consectetur ipsa soluta fugit facilis in?</p>
+                                </div>
+
+                                <div>
+                                  <!--  <div class="item__size-dropdown dropdown form-group" id="select-type">
+                                        <button class="item__size-btn btn btn-tertiary btn-block dropdown-toggle" data-toggle="dropdown" >
+                                            Type <span class="caret"></span>
+                                        </button>
+                                        <ul class="item__size-dropdown-menu dropdown-menu" id="type-menu">
+                                            <li class="item__size-item dropdown-item">Restaurant or Food Experience</li>
+                                            <li class="item__size-item dropdown-item">Website or Mobile Experience</li>
+                                            <li class="item__size-item dropdown-item">Refund</li>
+                                            <li class="item__size-item dropdown-item">Late Delivery</li>
+                                            <li class="item__size-item dropdown-item">General Inquiry or Comment</li>
+                                        </ul>
+                                    </div>-->
+                                    <div class="d-flex justify-content-between">
+                                        <h3 class="item__price font-weight-bold">Rs. <span class="item__price-value">615</span></h3>
+                                        <a href="#" class="item__cart add-cart-btn btn btn-primary font-secondary text-uppercase m-0">Add to cart</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-  
+        </section>
 
-  </main>
-  <!-- Main Content -->
-</div>
+    </main>
 
 
 
+    
 
-
-
-  <% include ../partials/_footer %>
+    <script src="/script/menu.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
+</html>
